# open-claw-agent

./: .dockerignore  .env.e2e.example  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BACKLOG.md  CODEBASE_AI_SPEC.md  CODEX_TASK_SP1_COMMANDER_ROUTER.md  CODEX_TASK_SP4_FRONTEND_DASHBOARD.md  COMMERCIALIZATION_SCORE.md  DECISIONS.md  Dockerfile  HANDOVER_REPORT_2026-04-02.md  OpenClaw_GitHub_资料与优点分析.md  PROJECT_CONTROL_CENTER.md  PROJECT_FULL_AUDIT_2026-03-31.md  PROJECT_STATE.md  README.md  SKIP_TEMP.md  SYSTEM_ARCHITECTURE_OVERVIEW.md  auto.cursorrules  docker-compose.agent-legacy.yml  docker-compose.backend.yml  docker-compose.dev.yml  docker-compose.example.yml  docker-compose.full.yml  docker-compose.vllm.yml  docker-compose.yml  dragon_auth.db  dragon_billing.db  jest.config.cjs  jest.config.js  node_modules.gitignore  package-lock.json  package.json  tmp_login_resp.json  tmp_onboard_page.js  tsconfig.json  【请您看】双击能打开什么.txt  (+9 more)
.docker-config/: .token_seed
apps/: README.md
apps/desktop-client/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-client/src-tauri/capabilities/: default.json
apps/desktop-client/src-tauri/src/: lib.rs  mcp_tools.rs  visual_automation.rs
backend/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
deploy/: server-start.bat  server-start.sh
docs/: ANYTHINGLLM_BORROWING_ANALYSIS.md  ANYTHINGLLM_CODEX_INDEX.md  AOTO_CUT_INTEGRATION_PREP_2026-03-29.md  AUROGEN_BORROWING_ANALYSIS.md  AWESOME_AGENTS_BORROWING_ANALYSIS.md  AWESOME_SYSPROMPTS_ELIFUZZ_ANALYSIS.md  (+379 more)
(+4945 files in other folders)
